--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.9",
+    "@mui/lab": "^5.0.0-alpha.144",
     "@mui/material": "^5.14.9",
     "@types/node": "20.6.0",
     "@types/react": "18.2.21",
@@ -25,6 +26,7 @@
     "react-dom": "18.2.0",
     "sass": "^1.67.0",
     "tailwindcss": "3.3.3",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "zustand": "^4.4.1"
   }
 }
